; ModuleID = '/home/carl/AnghaBench/twemproxy/src/extr_nc_util.c_nc_unresolve_desc.c'
source_filename = "/home/carl/AnghaBench/twemproxy/src/extr_nc_util.c_nc_unresolve_desc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sockinfo = type { i32 }
%struct.sockaddr = type { i32 }

@nc_unresolve_desc.si = internal global %struct.sockinfo zeroinitializer, align 4
@.str = private unnamed_addr constant [8 x i8] c"unknown\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @nc_unresolve_desc(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.sockaddr*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %7 = call i32 @memset(%struct.sockinfo* @nc_unresolve_desc.si, i32 0, i32 4)
  store %struct.sockaddr* bitcast (%struct.sockinfo* @nc_unresolve_desc.si to %struct.sockaddr*), %struct.sockaddr** %4, align 8
  store i32 4, i32* %5, align 4
  %8 = load i32, i32* %3, align 4
  %9 = load %struct.sockaddr*, %struct.sockaddr** %4, align 8
  %10 = call i32 @getsockname(i32 %8, %struct.sockaddr* %9, i32* %5)
  store i32 %10, i32* %6, align 4
  %11 = load i32, i32* %6, align 4
  %12 = icmp slt i32 %11, 0
  br i1 %12, label %13, label %14

13:                                               ; preds = %1
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  br label %18

14:                                               ; preds = %1
  %15 = load %struct.sockaddr*, %struct.sockaddr** %4, align 8
  %16 = load i32, i32* %5, align 4
  %17 = call i8* @nc_unresolve_addr(%struct.sockaddr* %15, i32 %16)
  store i8* %17, i8** %2, align 8
  br label %18

18:                                               ; preds = %14, %13
  %19 = load i8*, i8** %2, align 8
  ret i8* %19
}

declare dso_local i32 @memset(%struct.sockinfo*, i32, i32) #1

declare dso_local i32 @getsockname(i32, %struct.sockaddr*, i32*) #1

declare dso_local i8* @nc_unresolve_addr(%struct.sockaddr*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
